commit last version modification